# Task-Manager

./: CMakeLists.txt  CMakeLists.txt.user.2556695  README.md
resources/: resources.qrc
src/: mainwindow.cpp  mainwindow.h  processcategorizer.cpp  processcategorizer.h  processessidebar.h  systeminfo.cpp  systeminfo.h
